Attempt at fixing overflow

--- a/indexS.css
+++ b/indexS.css
@@ -90,7 +90,7 @@ text-align: center;
   top:0;
   left:0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow-x:hidden;
   overflow-y: hidden;
 }
